# practicum_gb_2part

./: app_00.py  pyproject.toml  wsgi.py
static/css/: style.css
templates/: base.html  four.html  index.html  second.html  three.html
