[tool.poetry]
name = "ls"
version = "0.1.0"
description = "class work"
authors = ["darkwolf <darkwolf1990janary@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
